<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="4dp"
        android:layout_toStartOf="@id/btn_hapus"
        android:layout_alignParentStart="true"
        android:text="@string/item_name"/>

    <TextView
        android:id="@+id/tv_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/tv_name"
        android:layout_alignParentStart="true"
        android:padding="4dp"
        android:text="@string/quantity"/>

    <TextView
        android:id="@+id/tv_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/tv_name"
        android:layout_toEndOf="@id/tv_qty"
        android:padding="4dp"
        android:text="@string/multiplication_symbol"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/tv_name"
        android:layout_toStartOf="@id/btn_hapus"
        android:layout_toEndOf="@id/tv_multiplication"
        android:padding="4dp"
        android:text="@string/price"/>

    <Button
        android:id="@+id/btn_hapus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/hapus"
        android:layout_margin="8dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>