<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteOrderActivity">

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginHorizontal="6dp"
        android:layout_alignParentEnd="true"
        android:text="@string/main_menu"/>

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_below="@id/btn_main_menu"
        android:layout_margin="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/complete_text"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/blue_pale"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_complete"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/blue_pale"
        android:paddingHorizontal="16dp"
        android:text="@string/total"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        tools:listitem="@layout/complete_order_item"
        android:layout_below="@id/tv_total"/>

</RelativeLayout>