<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:layout_marginHorizontal="6dp"
        android:text="@string/my_order"/>

    <GridLayout
        android:layout_margin="12dp"
        android:columnCount="2"
        android:rowCount="2"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/drinks"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_rounded">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/drinks"
                android:padding="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/drinks"
                android:layout_gravity="center"
                android:layout_margin="6dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/snacks"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_rounded">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/snacks"
                android:padding="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/snacks"
                android:layout_gravity="center"
                android:layout_margin="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/foods"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_rounded">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/food"
                android:padding="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/foods"
                android:layout_gravity="center"
                android:layout_margin="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_up"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_rounded">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/top_up"
                android:padding="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/top_up"
                android:layout_gravity="center"
                android:layout_margin="6dp"/>
        </LinearLayout>

    </GridLayout>

</LinearLayout>