<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderItemActivity">

    <Button
        android:id="@+id/btn_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginHorizontal="6dp"
        android:layout_alignParentEnd="true"
        android:text="@string/my_order"/>

    <LinearLayout
        android:id="@+id/layout_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_my_order"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Item Name" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            tools:text="Rp. price" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_my_order"
        android:layout_marginStart="20dp"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/layout_item"
        android:text="@string/quantity"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_quantity"
        android:layout_alignStart="@id/tv_quantity"
        android:layout_alignEnd="@id/tv_quantity"
        android:inputType="number"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_order_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_below="@id/layout_item"
        android:layout_marginEnd="30dp"
        android:padding="8dp"
        android:layout_alignParentEnd="true"
        android:text="@string/order_more"/>

</RelativeLayout>